--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -20,8 +20,8 @@ workflows:
         - run: |
             echo "Downloading and installing jq..."
             curl -sSL https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 -o /home/atlantis/bin/jq
-            chmod +x jq
-            mv jq /home/atlantis/bin/jq
+            chmod +x /home/atlantis/bin/jq
+            export PATH=/home/atlantis/bin:$PATH
         - init
         - plan:
             extra_args: ["-out", "tfplan.binary"]
