--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -4,6 +4,7 @@ projects:
   - name: "infra"
     dir: "infra-local"
     workflow: "custom"
+
 workflows:
   custom:
     plan:
@@ -18,22 +19,15 @@ workflows:
             mv opa /home/atlantis/bin/opa
             export PATH=/home/atlantis/bin:$PATH
         - run: |
-            echo "Downloading and installing jq..."
-            curl -sSL https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 -o /home/atlantis/bin/jq
-            chmod +x /home/atlantis/bin/jq
-            export PATH=/home/atlantis/bin:$PATH
-        - init
-        - plan:
-            extra_args: ["-out", "tfplan.binary"]
-        - run: terraform show -json tfplan.binary > tfplan.json
-        - run: |
             echo "Running OPA policy checks..."
             OPA_RESULT=$(opa eval --format json --data infra-local/policy.rego --input tfplan.json "data.terraform.analysis.violations")
             echo "$OPA_RESULT" > opa_results.json
         - run: |
-            echo "Generating markdown report..."
-            echo -e "### OPA Policy Check Results\n\n| No | Violation Types | Description |\n|----|-----------------|-------------|" > opa_results.md
-            jq -r '.result[].expressions[].value | to_entries | .[] | "| \(.key + 1) | \(.value.msg | split(":")[0]) | \(.value.msg) |"' opa_results.json >> opa_results.md
+            echo "Displaying OPA results in table format..."
+            echo -e "No | Violation Types | Description"
+            echo -e "---|-----------------|-------------"
+            # Use jq to parse the OPA results and display them in table format
+            jq -r '.result[].expressions[].value | to_entries | .[] | "\(.key + 1) | \(.value.msg | split(":")[0]) | \(.value.msg)"' opa_results.json
         - run: |
             echo "Posting results to PR..."
             atlantis comment --file opa_results.md
