--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -12,6 +12,13 @@ workflows:
         - run: echo "Starting custom workflow"
         - run: git --version
         - run: |
+            echo "Initializing Terraform..."
+            terraform init infra-local
+        - run: |
+            echo "Generating Terraform plan in JSON format..."
+            terraform plan -out=tfplan.binary infra-local
+            terraform show -json tfplan.binary > tfplan.json
+        - run: |
             echo "Running OPA policy checks..."
             OPA_RESULT=$(opa eval --format json --data infra-local/policy.rego --input tfplan.json "data.terraform.analysis.violations")
             echo "$OPA_RESULT" > opa_results.json
@@ -21,9 +28,7 @@ workflows:
             echo -e "---|-----------------|-------------"
             # Use jq to parse the OPA results and display them in table format
             jq -r '.result[].expressions[].value | to_entries | .[] | "\(.key + 1) | \(.value.msg | split(":")[0]) | \(.value.msg)"' opa_results.json
-        - run: |
-            echo "Posting results to PR..."
-            atlantis comment --file opa_results.md
+
     apply:
       steps:
         - apply
