--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -16,8 +16,11 @@ workflows:
             cd infra-local && terraform init
         - run: |
             echo "Generating Terraform plan in JSON format..."
-            cd infra-local && terraform plan -out=tfplan.binary
-            cd infra-local && terraform show -json tfplan.binary > tfplan.json
+            terraform plan -out=tfplan.binary
+            terraform show -json tfplan.binary > tfplan.json
+        - run: |
+            echo "Returning to root directory..."
+            cd ..
         - run: |
             echo "Running OPA policy checks..."
             OPA_RESULT=$(opa eval --format json --data infra-local/policy.rego --input tfplan.json "data.terraform.analysis.violations")
