--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -13,14 +13,11 @@ workflows:
         - run: git --version
         - run: |
             echo "Initializing Terraform..."
-            cd infra-local && terraform init
+            terraform init
         - run: |
             echo "Generating Terraform plan in JSON format..."
             terraform plan -out=tfplan.binary
             terraform show -json tfplan.binary > tfplan.json
-        - run: |
-            echo "Returning to root directory..."
-            cd ..
         - run: |
             echo "Running OPA policy checks..."
             OPA_RESULT=$(opa eval --format json --data infra-local/policy.rego --input tfplan.json "data.terraform.analysis.violations")
