--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -41,6 +41,31 @@ workflows:
             else
               echo "No violations found." >> $GITHUB_STEP_SUMMARY
             fi
+    cek:
+      - steps:
+        - run: |
+            echo "Running OPA policy checks..."
+            echo "## OPA Policy Check Results" >> $GITHUB_STEP_SUMMARY
+            
+            # Run OPA eval and directly process the output
+            OPA_OUTPUT=$(opa eval --format pretty --data infra-local/policy.rego --input tfplan.json "data.terraform.analysis.violations")
+            
+            if [ -n "$OPA_OUTPUT" ]; then
+              echo "| # | Violation Type | Description |" >> $GITHUB_STEP_SUMMARY
+              echo "|---|---------------|-------------|" >> $GITHUB_STEP_SUMMARY
+            
+              # Process and format the output directly
+              echo "$OPA_OUTPUT" | while IFS= read -r line; do
+                if [[ $line =~ "violation_type" ]]; then
+                  VIOLATION_TYPE=$(echo "$line" | sed 's/.*"violation_type": "\([^"]*\)".*/\1/')
+                elif [[ $line =~ "description" ]]; then
+                  DESCRIPTION=$(echo "$line" | sed 's/.*"description": "\([^"]*\)".*/\1/')
+                  echo "| $((++count)) | $VIOLATION_TYPE | $DESCRIPTION |" >> $GITHUB_STEP_SUMMARY
+                fi
+              done
+            else
+              echo "No violations found." >> $GITHUB_STEP_SUMMARY
+            fi
     apply:
       steps:
         - apply
