--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -25,25 +25,16 @@ workflows:
             echo "Running OPA policy checks..."
             echo "## OPA Policy Check Results"
             
-            OPA_OUTPUT=$(opa eval --format pretty --data infra-local/policy.rego --input tfplan.json "data.terraform.analysis.violations")
+            # Run OPA and convert to JSON format
+            opa eval --format json --data infra-local/policy.rego --input tfplan.json "data.terraform.analysis.violations" > opa_output.json
             
-            if [ ! -z "$OPA_OUTPUT" ]; then
-              echo "| # | Violation Type | Description |"
-              echo "|---|---------------|-------------|"
-              
-              count=0
-              echo "$OPA_OUTPUT" | while read -r line; do
-                if echo "$line" | grep -q "violation_type"; then
-                  VIOLATION_TYPE=$(echo "$line" | sed 's/.*"violation_type": "\([^"]*\)".*/\1/')
-                elif echo "$line" | grep -q "description"; then
-                  DESCRIPTION=$(echo "$line" | sed 's/.*"description": "\([^"]*\)".*/\1/')
-                  count=$((count + 1))
-                  echo "| $count | $VIOLATION_TYPE | $DESCRIPTION |"
-                fi
-              done
-            else
-              echo "No violations found."
-            fi
+            # Process with jq and create table
+            echo "| # | Violation Type | Description |"
+            echo "|---|---------------|-------------|"
+            
+            jq -r '.result[0].expressions[0].value[] | "| \(.id // 1) | \(.violation_type) | \(.description) |"' opa_output.json || echo "No violations found."
+            
+            rm -f opa_output.json
         - run: |
             echo "Cleaning up plan files..."
             rm -f tfplan.binary tfplan.json
