--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -24,26 +24,23 @@ workflows:
         - run: |
             echo "Running OPA policy checks..."
             echo "## OPA Policy Check Results"
-            
+
             # Run OPA and save output
-            opa eval --format json --data policy.rego --input tfplan.json "data.terraform.analysis.violations" > opa_output.json
-            
+            opa eval --format json --data infra-local/policy.rego --input tfplan.json "data.terraform.analysis.violations" > opa_output.json
+
             echo "DEBUG: OPA Output Structure:"
             cat opa_output.json
-            
+
             # Print table header
-            echo "| # | Violation Type | Description |"
-            echo "|---|---------------|-------------|"
-            
-            # Try simpler jq query first
-            jq -r '.result[0].violations[]? | "| 1 | \(.violation_type) | \(.description) |"' opa_output.json || \
-            jq -r '.result[]? | "| 1 | \(.violation_type) | \(.description) |"' opa_output.json || \
-            echo "No violations found."
-            
+            echo "| # | Violation Description |"
+            echo "|---|------------------------|"
+
+            # Extract violations and format properly
+            count=1
+            jq -r '.result[0].expressions[0].value[] | "| '"$count"' | \(.) |"' opa_output.json || echo "No violations found."
+
             rm -f opa_output.json
-        - run: |
-            echo "Cleaning up plan files..."
-            rm -f tfplan.binary tfplan.json
+    
 
     apply:
       steps:
